edit head ,header,footer

--- a/public/components/headers.html
+++ b/public/components/headers.html
@@ -98,7 +98,7 @@
         </div>
         <ul id="miniPopup-departments" class="miniPopup miniPopup-departments dropdown-menu">
           <li class="nav__item">
-            <a href="department-single.html" class="nav__item-link" data-lang="footer_department_item1">طب الأسرة</a>
+            <a href="department-single.html" class="nav__item-link" data-lang="title_family_medicine">طب الأسرة</a>
           </li><!-- /.nav-item -->
 
           <li class="nav__item">
