--- a/public/components/footer.html
+++ b/public/components/footer.html
@@ -18,7 +18,7 @@
             <nav class="d-flex justify-content-between">
 
               <ul class="list-unstyled">
-                <li><a href="services-single.html" data-lang="footer_department_item1"> طب الأسرة</a></li>
+                <li><a href="services-single.html" data-lang="title_family_medicine"> طب الأسرة</a></li>
                 <li><a href="services-single2.html" data-lang="footer_department_item2"> العظام</a></li>
                 <li><a href="services-single3.html" data-lang="footer_department_item3"> التجميل</a></li>
                 <li><a href="services-single1.html" data-lang="footer_department_item4"> جراحة اليد</a></li>
@@ -29,8 +29,8 @@
                 <li><a href="services-single13.html" data-lang="footer_department_item7">النساء والتوليد</a></li>
                 <li><a href="services-single16.html" data-lang="footer_department_item8">المختبر</a></li>
                 <li><a href="services-single17.html" data-lang="footer_department_item9">الأنف والأذن والحنجرة </a></li>
-                <li><a href="services-single18.html" data-lang="footer_department_item10"> التغذية</a></li>
-                <li><a href="services-single19.html" data-lang="footer_department_item1_1">العلاج الطبيعي</a></li>
+                <li><a href="services-single18.html" data-lang="title_family_medicine0"> التغذية</a></li>
+                <li><a href="services-single19.html" data-lang="title_family_medicine_1">العلاج الطبيعي</a></li>
               </ul>
 
             </nav>
