--- a/public/components/headers.html
+++ b/public/components/headers.html
@@ -105,7 +105,7 @@
             <a href="department-single1.html" class="nav__item-link" data-lang="footer_department_item4"> جراحة اليد</a>
           </li><!-- /.nav-item -->
           <li class="nav__item">
-            <a href="department-single11.html" class="nav__item-link" data-lang="footer_department_item6">الجلدية والليزر </a>
+            <a href="department-single11.html" class="nav__item-link" data-lang="services_title_dermatology">الجلدية والليزر </a>
           </li><!-- /.nav-item -->
           <li class="nav__item">
             <a href="department-single2.html" class="nav__item-link" data-lang="footer_department_item2"> العظام</a>
