--- a/public/components/footer.html
+++ b/public/components/footer.html
@@ -20,7 +20,7 @@
               <ul class="list-unstyled">
                 <li><a href="services-family_medicine.html" data-lang="services_title_family_medicine"> طب الأسرة</a></li>
                 <li><a href="services-orthopedic_surgery.html" data-lang="footer_department_item2"> العظام</a></li>
-                <li><a href="services-cosmetic.html" data-lang="footer_department_item3"> التجميل</a></li>
+                <li><a href="services-plastic.html" data-lang="footer_department_item3"> التجميل</a></li>
                 <li><a href="services-hand_surgery.html" data-lang="services_title_hand_surgery"> جراحة اليد</a></li>
                 <li><a href="services-internal_medicine.html" data-lang="services_title_internal_medicine"> الطب الباطني</a></li>
                 <li><a href="services-dermatology.html" data-lang="services_title_dermatology"> الجلدية والليزر </a></li>
@@ -54,10 +54,7 @@
                   </select>
                 </li>-->
 
-                <button id="play" class="text-white">
-                  <option value="ar" data-lang="arabic" selected>arabic</option>
-                  <option value="en" data-lang="english">english</option>
-                </button>
+                
               </ul>
               
                 
@@ -80,7 +77,8 @@
               <ul class="social-icons list-unstyled mb-0">
                 <li><a href="https://www.facebook.com/GardeniaMedicalCentre/"><i class="fab fa-facebook-f"></i></a></li>
                 <li class="mx-3"><a href="https://www.instagram.com/gardeniamedical/"><i class="fab fa-instagram"></i></a></li>
-                <li><a href="https://www.tiktok.com/@gardeniamedical"><i class="fab fa-tiktok"></i></a></li>
+                <li><a href="https://wa.me/97466505015"><i class="fab fa-whatsapp"></i></a></li>
+                <!-- <li><a href="https://www.tiktok.com/@gardeniamedical"><i class="fab fa-tiktok"></i></a></li> -->
               </ul><!-- /.social-icons -->
             </div>
           </div><!-- /.footer-widget__content -->
