--- a/public/components/headers.html
+++ b/public/components/headers.html
@@ -36,7 +36,9 @@
               <ul class="social-icons list-unstyled mb-0 mr-30">
                 <li><a href="https://www.facebook.com/GardeniaMedicalCentre/"><i class="fab fa-facebook-f"></i></a></li>
                 <li class="mx-3"><a href="https://www.instagram.com/gardeniamedical/"><i class="fab fa-instagram"></i></a></li>
-                <li><a href="https://www.tiktok.com/@gardeniamedical"><i class="fab fa-tiktok"></i></a></li>
+                <!-- <li><a href="https://www.tiktok.com/@gardeniamedical"><i class="fab fa-tiktok"></i></a></li> -->
+                <li><a href="https://wa.me/97466505015"><i class="fab fa-whatsapp"></i></a></li>
+
               </ul><!-- /.social-icons -->
               
             </div>
@@ -98,24 +100,36 @@
         </div>
         <ul id="miniPopup-departments" class="miniPopup miniPopup-departments dropdown-menu">
           <li class="nav__item">
-            <a href="department-single.html" class="nav__item-link" data-lang="services_title_family_medicine">طب الأسرة</a>
-          </li><!-- /.nav-item -->
+            <a href="services-plastic.html" class="nav__item-link" data-lang="services_title_plastic">
+              Plastic and Reconstructive Surgery
+            </a>
+          </li> 
 
           <li class="nav__item">
-            <a href="department-single1.html" class="nav__item-link" data-lang="services_title_hand_surgery"> جراحة اليد</a>
+            <a href="services-hand_surgery.html" class="nav__item-link" data-lang="services_title_hand_surgery">
+              Hand Surgery
+            </a>
           </li><!-- /.nav-item -->
           <li class="nav__item">
-            <a href="department-single11.html" class="nav__item-link" data-lang="services_title_dermatology">الجلدية والليزر </a>
+            <a href="services-orthopedic_surgery.html" class="nav__item-link" data-lang="services_title_orthopedic_surgery">
+              Orthopedic
+            </a>
           </li><!-- /.nav-item -->
           <li class="nav__item">
-            <a href="department-single2.html" class="nav__item-link" data-lang="footer_department_item2"> العظام</a>
+            <a href="services-dermatology.html" class="nav__item-link" data-lang="services_title_dermatology">
+              Dermatology & Laser
+            </a>
           </li><!-- /.nav-item -->
           <li class="nav__item">
-            <a href="department-single3.html" class="nav__item-link" data-lang="footer_department_item3"> التجميل</a>
+            <a href="services-general_surgery.html" class="nav__item-link" data-lang="services_title_general_surgery">
+              General & Bariatric Surgery
+            </a>
           </li><!-- /.nav-item -->
          
           <li class="nav__item">
-            <a href="department-single10.html" class="nav__item-link" data-lang="services_title_internal_medicine"> الطب الباطني</a>
+            <a href="services-day_surgery.html" class="nav__item-link" data-lang="services_title_day_surgery">
+              Same Day Surgery
+            </a>
           </li><!-- /.nav-item -->
         </ul> <!-- /.miniPopup-departments -->
        
