--- a/public/components/footer.html
+++ b/public/components/footer.html
@@ -86,3 +86,10 @@
       </div><!-- /.row -->
     </div><!-- /.container -->
   </div><!-- /.footer-primary -->
+
+
+  <a href="https://wa.me/97466505015">
+    <button id="whatsAppButton">
+      <i class="fab fa-whatsapp"></i>
+    </button>
+  </a>
